fix: vertical scroll and gaps

--- a/src/components/features/Acordeon/Styles.css
+++ b/src/components/features/Acordeon/Styles.css
@@ -190,7 +190,7 @@ h3 {
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin-bottom: 1rem;
+  margin-bottom: 3vh;
 }
 .ButtonCalculate {
   display: inline-block;
